# python-sqlparse

./: .gitignore  AGENTS.md  CHANGELOG  Makefile  pyproject.toml
.github/workflows/: python-app.yml
sqlparse/: __init__.py
sqlparse/engine/: statement_splitter.py
tests/: test_split.py
