[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlparse"
description = "A non-validating SQL parser."
authors = [{name = "Andi Albrecht", email = "albrecht.andi@gmail.com"}]
readme = "README.rst"
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Software Development",
]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/andialbrecht/sqlparse"
Documentation = "https://sqlparse.readthedocs.io/"
"Release Notes" = "https://sqlparse.readthedocs.io/en/latest/changes.html"
Source = "https://github.com/andialbrecht/sqlparse"
Tracker = "https://github.com/andialbrecht/sqlparse/issues"

[project.scripts]
sqlformat = "sqlparse.__main__:main"

[project.optional-dependencies]
dev = [
    "build",
]
doc = [
    "sphinx",
]

[tool.hatch.version]
path = "sqlparse/__init__.py"

[tool.coverage.run]
source_pkgs = ["sqlparse", "tests"]
branch = true
parallel = true
omit = [
    "sqlparse/__main__.py",
]

[tool.coverage.paths]
sqlparse = ["sqlparse"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
sqlparse = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = "*"
coverage = "*"
flake8 = "*"

[tool.pixi.feature.test.pypi-dependencies]
sqlparse = { path = ".", editable = true }

[tool.pixi.feature.py38.dependencies]
python = "3.8.*"

[tool.pixi.feature.py39.dependencies]
python = "3.9.*"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"


[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }
py38 = { features = ["test", "py38"], solve-group = "py38" }
py39 = { features = ["test", "py39"], solve-group = "py39" }
py310 = { features = ["test", "py310"], solve-group = "py310" }
py311 = { features = ["test", "py311"], solve-group = "py311" }
py312 = { features = ["test", "py312"], solve-group = "py312" }
py313 = { features = ["test", "py313"], solve-group = "py313" }

[tool.pixi.tasks]
test-py38 = "pixi run -e py38 pytest tests/"
test-py39 = "pixi run -e py39 pytest tests/"
test-py310 = "pixi run -e py310 pytest tests/"
test-py311 = "pixi run -e py311 pytest tests/"
test-py312 = "pixi run -e py312 pytest tests/"
test-py313 = "pixi run -e py313 pytest tests/"
test-all = { depends-on = ["test-py38", "test-py39", "test-py310", "test-py311", "test-py312", "test-py313"] }
lint = "pixi run -e py311 flake8 sqlparse/"
coverage = "coverage run -m pytest tests/"
coverage-combine = "coverage combine"
coverage-report = "coverage report"
coverage-xml = "coverage xml"
